--- a/categories.html
+++ b/categories.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categories - Money Tracker</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -165,7 +165,7 @@
         </div>
     </div>
 
-    <script src="js/main.js"></script>
-    <script src="js/categories.js"></script>
+    <script src="./categories.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
