--- a/shopping-list.html
+++ b/shopping-list.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping List - Money Tracker</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/shopping-list-fix.css">
-    <link rel="stylesheet" href="css/shopping-list-swipe.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./shopping-list-fix.css">
+    <link rel="stylesheet" href="./shopping-list-swipe.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -209,8 +209,8 @@
         </div>
     </div>
 
-    <script src="js/main.js"></script>
-    <script src="js/shopping-list-swipe.js"></script>
-    <script src="js/shopping-list.js"></script>
+    <script src="./shopping-list.js"></script>
+    <script src="./shopping-list-swipe.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
